fix: tangle with all the files desc to tangle the full file

--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -3,17 +3,14 @@
 #+EMAIL:  rising.lambda@gmail.com
 
 #+DESCRIPTION: A literate programming version of my Emacs Initialization script, loaded by the .emacs file.
-#+PROPERTY:    header-args        :results silent   :eval no-export   :comments org
 #+PROPERTY:    header-args        :mkdirp yes
-#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/init.el"
-#+PROPERTY:    header-args:shell  :tangle no
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 ** 错误提醒相关
    当发生错误的时候，打印错错误的堆栈信息。
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      ;;(setq url-proxy-services '(("https" . "127.0.0.1:1089")
      ;;                        ("http" . "127.0.0.1:1089")))
      (setq debug-on-error t)
@@ -22,7 +19,7 @@
 ** 版本配置
    配置文件使用了一些特性，这些特性在太久的版本上会出现不兼容。对比版本给出相应的提示信息。
 
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (let ((minver "24.4"))
        (when (version< emacs-version minver)
 	 (error "Your Emacs is too old -- this config requires v%s or higher" minver)))
@@ -34,7 +31,7 @@
 
    #+HEADER: :var conf.d=(or (and (boundp 'm/conf.d) (file-directory-p m/conf.d) m/conf.d) (expand-file-name user-emacs-directory))
    #+HEADER: :var home.d=(or (and (boundp 'm/home.d) (file-directory-p m/home.d) m/home.d) (expand-file-name "~"))
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (defconst m/os
        (let ((os (symbol-name system-type)))
 	 (cond ((string= os "darwin") 'macos)
@@ -43,27 +40,21 @@
 
      (defvar m/conf.d conf.d)
      (defvar m/home.d home.d)
-
-     (defun tangle-if-absent (path)
-       (let* ((filename (m/resolve path)))
-	 (if (file-exists-p filename)
-	     nil
-	   filename)))
    #+END_SRC
 
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (global-unset-key (kbd "M-`"))
    #+END_SRC
 
 
 ** 是否开启离线模式
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (defvar m/offline 
        (file-directory-p (expand-file-name "offline" m/conf.d)))
    #+END_SRC
 
 ** 垃圾回收设置
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (setq gc-cons-threshold 100000000)
    #+END_SRC
 ** 包管理配置
@@ -72,7 +63,7 @@
 *** 包管理器配置
     Emacs 的包管理器名为：[[http://tromey.com/elpa/][package]]. 但是 package 默认配置插件仓库包含的插件相对较少，我们需要添加一些常用的第三方插件仓库，以便与搜索与安装插件。
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
       (setq load-path
 	    (delq nil (mapcar
 		       (function (lambda (p)
@@ -121,7 +112,7 @@
     Emacs 常见的配置管理都是先使用包管理器安装对应的包，然后再进行配置。安装包和配置是割裂开的。对于使用多个包的情况，安装包配置会分散到各个地方，安装包相关的配置会变得难以维护。
     [[https://github.com/jwiegley/use-package][use-package]] 提供了一个非常干净简洁的安装包配置的方式。use-package 可以将安装包的配置隔离开，使得 Emacs 配置文件干净简洁。
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
       (unless (and 
 	       (package-installed-p 'use-package)
 	       (package-installed-p 'diminish))
@@ -145,13 +136,13 @@
 
 *** 包加载路径配置
     所有的自定义的配置文件都在 emacs 配置文件夹下的 lisp 目录下。所以我们需要将 lisp 目录添加到加载路径中
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
       (add-to-list 'load-path (expand-file-name "lisp" m/conf.d))
       (setq custom-file (expand-file-name "custom.el" m/conf.d))
     #+END_SRC
 
 *** 保证永远使用最新的 lisp 配置文件，或者库文件
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
       (use-package auto-compile
 	:ensure t
 	:custom (load-prefer-newer t)
@@ -163,7 +154,7 @@
  
 ** 自定义配置聚合
 
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (defconst m/load-path (lambda () (list 
 				       (expand-file-name "lisp" m/conf.d)
 				       (expand-file-name "verilog-mode" (expand-file-name "3rdparty" m/conf.d))
@@ -201,6 +192,6 @@
      (use-package init-macros
        :load-path m/load-path)
    #+END_SRC
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
      (provide 'init)
    #+END_SRC
