--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -3,17 +3,14 @@
 #+EMAIL:  rising.lambda@gmail.com
 
 #+DESCRIPTION: A literate programming version of my Emacs Initialization script, loaded by the .emacs file.
-#+PROPERTY:    header-args        :results silent   :eval no-export   :comments org
 #+PROPERTY:    header-args        :mkdirp yes
-#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/lisp/init-editing.el"
-#+PROPERTY:    header-args:shell  :tangle no
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 ** 基础设置
 *** 基础设置
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (put 'narrow-to-region 'disabled nil)
       (put 'narrow-to-page 'disabled nil)
       (put 'narrow-to-defun 'disabled nil)
@@ -22,7 +19,7 @@
       (cua-selection-mode t)
     #+END_SRC
     不生成 #filename# 临时文件
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (auto-save-visited-mode)
       (make-directory (expand-file-name "backups" m/conf.d) t)
       (setq auto-save-file-name-transforms
@@ -31,30 +28,30 @@
 	    (expand-file-name "backups/" m/conf.d))
     #+END_SRC
     禁止备份文件
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (setq make-backup-files nil)
       ; stop to create the lock files
       ; lock files is used to prevent concurrent edit of a file
       (setq create-lockfiles nil)
     #+END_SRC
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (setq delete-by-moving-to-trash t) 
     #+END_SRC
     保持光标在行尾
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (setq track-eol t)
       (setq line-move-visual nil)
     #+END_SRC
     默认整行删除，包括 \n
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (setq-default kill-whole-line t)
     #+END_SRC
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (setq set-mark-command-repeat-pop t)
     #+END_SRC
 *** 光标位置
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package beacon
 	:diminish beacon-mode
 	:config
@@ -84,7 +81,7 @@
     #+END_SRC
 *** 智能移动行首
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package mwim
 	:bind
 	("C-a" . mwim-beginning-of-code-or-line)
@@ -93,7 +90,7 @@
 
 *** 折叠
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package origami
 	:bind (("C-c f" . origami-recursively-toggle-node)
 	       ("C-c F" . origami-toggle-all-nodes))
@@ -103,7 +100,7 @@
 
 *** 回滚记录
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package undo-tree
 	:ensure t
 	:config
@@ -115,7 +112,7 @@
 
 *** file-paragraph & file-region & unfill-region & unfile-paragraph
     [fill & unfill][https://www.emacswiki.org/emacs/FillParagraph]
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package unfill
 	:config
 	(global-set-key (kbd "M-q") 'unfill-toggle))
@@ -123,14 +120,14 @@
 
 *** 上次修改的地方
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package goto-last-change
 	:bind ("C-x /" . goto-last-change))
     #+END_SRC
 
 ** 剪切设置
 *** 浏览剪切历史
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package browse-kill-ring
 	:custom
 	(browse-kill-ring-separator "\f")
@@ -143,12 +140,12 @@
     #+END_SRC
 
 ** 远程文件访问（Tramp: Transparent Remote Access Multiple Protocol）
-   #+BEGIN_SRC elisp :exports code :eval never :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (setq tramp-terminal-type "tramp")
    #+END_SRC
 ** 括号设置
 *** 括号配对显示
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package paren	
 	:custom
 	(show-paren-style 'mixed)
@@ -158,7 +155,7 @@
 	(show-paren-mode 1))
     #+END_SRC
 *** 括号自动匹配
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package elec-pair
 	:config
 	(defun m/electric-pair-local-text-mode ()
@@ -171,13 +168,13 @@
 	 (text-mode . m/electric-pair-local-text-mode)))
     #+END_SRC
 *** 括号中内容显示
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package rainbow-delimiters
 	:hook
 	((prog-mode . rainbow-delimiters-mode)))
     #+END_SRC
 *** 智能括号替换
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package smartparens
 	:bind
 	(([remap backward-up-list] . sp-backward-up-sexp)
@@ -218,7 +215,7 @@
 
 ** 搜索设置
 *** 在另外的 buffer 动态显示结果
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package swiper
 	:demand t
 	:bind 
@@ -252,7 +249,7 @@
 		(woman . ""))))
     #+END_SRC
 *** 替换
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package anzu
 	:config
 	(setq anzu-mode-lighter "")
@@ -262,7 +259,7 @@
 	 ([remap query-replace] . anzu-query-replace)))
     #+END_SRC
 *** 使用 rg 去处理 ripgrep 结果
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package rg
 	:preface
 	(defun rg-occur-hide-lines-not-matching (search-text)
@@ -307,7 +304,7 @@
 	      ("M-P" . rg-prev-file)))
     #+END_SRC
 *** 编辑搜索结果
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (use-package wgrep
 	:custom
 	(wgrep-enable-key "e")
@@ -316,7 +313,7 @@
     #+END_SRC
 
 ** 清除到指定地方
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package avy-zap
        :bind
        ("M-z" . avy-zap-to-char-dwim)
@@ -324,7 +321,7 @@
    #+END_SRC
 ** 扩充选定区域
 
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package expand-region
        :after org
        :bind
@@ -333,7 +330,7 @@
 
 ** 动态多光标
 
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package multiple-cursors
        :bind (
 	      ("C-<" . mc/mark-previous-like-this)
@@ -351,7 +348,7 @@
    #+END_SRC
 
 ** 移动或者复制行
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package move-dup
        :bind (("M-<up>" . move-dup-move-lines-up)
 	      ("M-<down>" . move-dup-move-lines-down)
@@ -362,7 +359,7 @@
    #+END_SRC
 
 ** 复制或剪切当前行
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package whole-line-or-region
        :diminish whole-line-or-region-local-mode
        :config
@@ -370,14 +367,14 @@
    #+END_SRC
 
 ** 高亮转义字符
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package highlight-escape-sequences
        :config
        (hes-mode t))
    #+END_SRC
 
 ** 智能扩展 hippie-expand
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (global-set-key (kbd "M-/") 'hippie-expand)
 
      (setq hippie-expand-try-functions-list
@@ -389,7 +386,7 @@
    #+END_SRC
 
 ** 高亮显示标示符
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package symbol-overlay
        :diminish symbol-overlay-mode
        :hook
@@ -405,13 +402,13 @@
 	     ("M-p" . symbol-overlay-jump-prev)))
    #+END_SRC
 ** mode line 警告
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package mode-line-bell
        :init
        (add-hook 'after-init-hook 'mode-line-bell-mode))
    #+END_SRC
 ** 回车
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (global-set-key (kbd "RET") 'newline-and-indent)
      (defun m/newline-at-end-of-line ()
        "Move to end of line, enter a newline, and reindent."
@@ -422,13 +419,13 @@
      (global-set-key (kbd "S-<return>") 'm/newline-at-end-of-line)
    #+END_SRC
 ** 驼峰或者下划线分字
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package subword
        :config
        (global-subword-mode))
    #+END_SRC
 ** 位置之间向前切换或者向后切换
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package backward-forward
        :bind
        ("C-," . backward-forward-previous-location)
@@ -440,7 +437,7 @@
        (backward-forward-mode t))
    #+END_SRC
 ** 显示行号
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package display-line-numbers
        :custom
        (display-line-numbers-width 3)
@@ -448,7 +445,7 @@
        ((prog-mode yaml-mode systemd-mode) . display-line-numbers-mode))
    #+END_SRC
 ** 其他
-   #+BEGIN_SRC elisp :eval never :exports code :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
      (use-package goto-line-preview
        :after display-line-numbers
        :bind
@@ -463,6 +460,6 @@
        (add-hook 'after-init-hook 'global-prettify-symbols-mode))
    #+END_SRC
 *** provide
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
       (provide 'init-editing)
     #+END_SRC
