--- a/hammers/emacs/ui.org
+++ b/hammers/emacs/ui.org
@@ -3,16 +3,13 @@
 #+EMAIL:  rising.lambda@gmail.com
 
 #+DESCRIPTION: A literate programming version of my Emacs Initialization script, loaded by the .emacs file.
-#+PROPERTY:    header-args        :results silent   :eval no-export   :comments org
 #+PROPERTY:    header-args        :mkdirp yes
-#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/lisp/init-ui.el"
-#+PROPERTY:    header-args:shell  :tangle no
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** 界面配置
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (setq use-file-dialog nil)
       (setq use-dialog-box nil)
       (setq inhibit-startup-screen t)
@@ -58,11 +55,11 @@
     #+END_SRC
 
 *** yes-no -> y-n
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (defalias 'yes-or-no-p 'y-or-n-p)
     #+END_SRC
 *** macos 不显示 title bar
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
     (use-package ns-auto-titlebar
       :if (eq m/os 'macos)
       :config
@@ -70,7 +67,7 @@
     #+END_SRC
 
 *** 安装主题
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package color-theme-sanityinc-tomorrow
 	:config
 	(setq custom-safe-themes t)
@@ -78,7 +75,7 @@
     #+END_SRC
 
 *** 安装图标库
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package all-the-icons
 	:config
 	(unless (or (member "all-the-icons" (font-family-list)) m/offline)
@@ -89,7 +86,7 @@
     #+END_SRC
 
 *** 快速切换窗口
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package ace-window
 	:ensure t
 	:custom
@@ -100,7 +97,7 @@
     #+END_SRC
 
 *** 分页
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package page-break-lines
 	:diminish page-break-lines-mode
 	:config
@@ -108,19 +105,19 @@
     #+END_SRC
     
 *** 命令行控制窗口
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package moom
 	:config (moom-mode))
     #+END_SRC
 
 *** 自动提示可选命令
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package which-key
 	:config
 	(which-key-mode t))
     #+END_SRC
 *** counsel
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package counsel
 	:diminish ivy-mode counsel-mode  
 	:custom
@@ -193,7 +190,7 @@
     #+END_SRC
 
 *** ivy-xref
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package ivy-xref
 	:after (ivy)
 	:init (if (< emacs-major-version 27)
@@ -201,7 +198,7 @@
 		(setq xref-show-definitions-function #'ivy-xref-show-defs)))
     #+END_SRC
 *** dashboard
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
       (use-package dashboard
 	:diminish dashboard-mode
 	:config
@@ -217,6 +214,6 @@
 	(after-init . dashboard-setup-startup-hook))
     #+END_SRC
 *** provide
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-ui.el") :comments link
 (provide 'init-ui)
     #+END_SRC
