--- a/hammers/emacs/email.org
+++ b/hammers/emacs/email.org
@@ -3,15 +3,13 @@
 #+EMAIL:  rising.lambda@gmail.com
 
 #+DESCRIPTION: mailbox 配置文件
-#+PROPERTY:    header-args        :comments org
 #+PROPERTY:    header-args        :mkdirp yes
-#+PROPERTY:    header-args:elisp  :tangle (expand-file-name "lisp/init-email.el" m/conf.d)
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** notmuch 配置
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-email.el") :comments link
       (defun sb/mbsync (&rest group)
 	(interactive)
 	(let ((group (or (and (car group) group) '("--all")))
@@ -187,7 +185,7 @@
     #+END_SRC
 
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-email.el") :comments link
       (setq message-send-mail-function 'message-send-mail-with-sendmail
 	    sendmail-program "msmtp"
 	    message-sendmail-envelope-from 'header
@@ -197,6 +195,6 @@
       (setq message-kill-buffer-on-exit t)
     #+END_SRC
 
-    #+BEGIN_SRC elisp :eval never :exports code :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-email.el") :comments link
       (provide 'init-email)
     #+END_SRC
